--- a/src/PathfindingVisualizer/Node/Node.css
+++ b/src/PathfindingVisualizer/Node/Node.css
@@ -1,6 +1,6 @@
 .node {
-  width: 25px;
-  height: 25px;
+  width: min(1.97vw, 30px);
+  height: min(1.97vw, 30px);
   outline: 1px solid rgb(175, 216, 248);
   display: inline-block;
   line-height: 25px;
