--- a/src/Modal/Modal.css
+++ b/src/Modal/Modal.css
@@ -39,6 +39,8 @@
   border: 2px solid #888;
   width: 60%;
   box-shadow: 10px 10px 5px grey;
+  min-width: 655px;
+  max-width: 800px;
 }
 
 .modal-content h3 {
