--- a/src/PathfindingVisualizer/PathfindingVisualizer.css
+++ b/src/PathfindingVisualizer/PathfindingVisualizer.css
@@ -130,3 +130,40 @@
   text-decoration: none;
   opacity: 0.5;
 }
+
+.show {display:block;}
+
+.hide {display: none;}
+
+.dropdown-content {
+  position: absolute;
+  background-color: #333;
+  min-width: 160px;
+  text-align: left;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 999;
+  top: 55px;
+  left: 250px;
+}
+
+.dropdown-content a {
+  color: #f2f2f2;
+  font-size: 20px;
+  margin-left: -40px;
+  padding: 7px 25px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  color: rgba(0, 190, 218, 0.75);
+}
+
+.active {
+  background-color: rgba(0, 217, 159, 0.5);
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
